--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 **/.idea/**/tasks.xml
 **/.idea/shelf/*
 **/.idea/dictionaries
-**/.idea/httpRequests/
+**/.idea/httpRequests
 
 # Sensitive or high-churn files
 **/.idea/**/dataSources/
