--- a/MMORPG-Server/MMORPG-Server/MMORPG-Server.csproj
+++ b/MMORPG-Server/MMORPG-Server/MMORPG-Server.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>MMORPG_Server</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="ClientFilesForUnity" />
+    </ItemGroup>
+
 </Project>
