--- a/MMORPG-Server/MMORPG-Server/MMORPG-Server.csproj
+++ b/MMORPG-Server/MMORPG-Server/MMORPG-Server.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Package" />
+    </ItemGroup>
+
 </Project>
